# sonilo-python

./: .gitignore  README.md  context7.json  pyproject.toml
.github/workflows/: ci.yml  publish-cli.yml  publish-video-kit.yml  publish.yml
examples/: generate.py  sfx.py
sonilo-cli/: README.md  pyproject.toml
sonilo-cli/src/sonilo_cli/: __main__.py
sonilo-cli/tests/: test_cli.py  test_context7.py  test_smoke.py
sonilo-video-kit/: LICENSE  README.md  pyproject.toml
sonilo-video-kit/examples/: score_video.py
sonilo-video-kit/src/sonilo_video_kit/: __init__.py  _ducking_api.py  _ffmpeg.py  duck.py  errors.py  generate.py  loudness.py  mix.py
sonilo-video-kit/tests/: test_duck.py  test_ducking_api.py  test_errors.py  test_ffmpeg_media.py  test_generate.py  test_loudness.py  test_mix.py  test_probe_video.py  test_public_surface.py  test_run_process.py  test_smoke.py
src/sonilo/: __init__.py  _async_client.py  _client.py  _requests.py  _streaming.py  errors.py  types.py
src/sonilo/resources/: account.py  tasks.py  text_to_music.py  text_to_sfx.py  video_to_music.py  video_to_sfx.py  video_to_sound.py  video_to_video_music.py  video_to_video_sfx.py  video_to_video_sound.py
tests/: test_async_client.py  test_client_identity.py  test_errors.py  test_requests.py  test_sfx.py  test_sfx_async.py  test_sfx_types.py  test_streaming.py  test_sync_client.py  test_video_to_sound.py  test_video_to_video.py
