[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonilo"
version = "0.2.0"
description = "Official Python client for the Sonilo API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Sonilo AI" }]
dependencies = ["httpx>=0.27"]
keywords = ["sonilo", "music", "generation", "text-to-music", "video-to-music", "ai"]

[project.urls]
Repository = "https://github.com/sonilo-ai/sonilo-python"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonilo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
