[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonilo-video-kit"
version = "0.1.0"
description = "Video helpers for the Sonilo API: generate a soundtrack and mix it into your video with ffmpeg"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Sonilo AI" }]
dependencies = ["sonilo>=0.3,<0.4"]
keywords = ["sonilo", "video", "music", "ffmpeg", "soundtrack", "ducking", "ai"]

[project.urls]
Repository = "https://github.com/sonilo-ai/sonilo-python"

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/sonilo_video_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
